--- a/style.css
+++ b/style.css
@@ -1,6 +1,75 @@
+@font-face {
+    font-family: caraa;
+    src: url(MacondoSwashCaps-Regular.ttf);
+}
+@font-face {
+    font-family: poppins;
+    src: url(Poppins-Regular.ttf);
+}
+@font-face {
+    font-family: serif;
+    src: url(PTSerif-Bold.ttf);
+}
+@font-face {
+    font-family: magnet;
+    src: url(magneta-medium.ttf);
+}
+@font-face {
+    font-family: argon;
+    src: url(Argon_Regular1.otf);
+}
+@font-face {
+    font-family: agbalu;
+    src: url(Agbalumo-Regular.ttf);
+}
+@font-face {
+    font-family: monsetra;
+    src: url(Montserrat-VariableFont_wght.ttf);
+}
+@font-face {
+    font-family: fat;
+    src: url(./fonts/FatSansRound.ttf);
+}
+.ikea{
+    font-family: fat;
+    color: gray;
+    font-size: 3vh;
+
+}
+.monsetrate{
+font-family: monsetra;
+font-size: 3vh;
+color: rgb(146, 144, 144);
+}
+.agba{
+font-family: agbalu;
+font-size: 3vh;
+color: rgb(143, 138, 138);
+}
+.argon{
+    font-family: argon;
+    font-size: 3vh;
+    color: rgb(146, 144, 144);
+}
+
+.magneta{
+    font-family: magnet;
+    color: rgb(202, 196, 196);
+    font-size: 3vh;
+} 
+ h1{
+    font-family: serif;
+} 
+.carra{
+    font-family: caraa;
+    font-size: 2vh;
+    color: rgb(85, 83, 83);
+}
+
 body{
-    width: 60%;
+    width: 65%;
     margin: auto;
+    margin-top: 100px;
 }
 .shape{
     position: relative;
@@ -33,7 +102,7 @@ body{
     height: 353px;
     top: 42%;
     left: 20%;
-    background: white;
+    /* background: white; */
     border-radius: 53px;
     }
     .shape3{
@@ -42,7 +111,7 @@ body{
     right: -60.07%;
     top: 7.53%;
     bottom: 25.35%;
-    background: #FFFCFC;
+    /* background: #FFFCFC; */
     }
     .last-shape{
     position: absolute;
@@ -51,7 +120,6 @@ body{
     top: 65.51%;
     bottom: 15.57%;
     margin-left: 210px;
-    background: #FFFCFC;
     transform: rotate(55.06deg);
     }
     .feature{
@@ -105,13 +173,12 @@ body{
         margin-left: 66%;
         margin-top: -33%;
         overflow: hidden;
-        position: relative;
 
     }
     .heading{
         font-family: CormonatGaramond;
+        margin-top: 100px;
         font-size: 190%;
-        margin-top: -35%;
      }
      .heading p{
         font-size: 50%;
@@ -169,14 +236,14 @@ body{
     color: #8a8e93;
 }
 .vase-container{
-    width: 60%;
+    width: 100%;
     display: flex;
 }
 .vase-image{
     position: relative;
 }
 .vase-figure{
-    margin-left: 3px;
+    margin-left: 2px;
 }
 .vase-figure img{
    width: 25.5vh;
@@ -206,7 +273,6 @@ margin-bottom: 100px;
 .trend-home-container{
     display: flex;
     gap: 60px;
-    /* width:80vh; height: 60vh; */
 
 }
 .shop-now{
@@ -219,7 +285,6 @@ margin-bottom: 100px;
       margin-top: 40px;
 }
 .offer{
-/* margin-bottom: 600px; */
 }
  .offer h6{
   font-weight: normal;
@@ -234,11 +299,11 @@ margin-bottom: 100px;
     margin-top: 100px;
     margin-left: 60px;
 }
-.style h6{
+.style-piece h6{
     font-weight: normal;
     margin-top: 50px;
 }
-.style h1{
+.style-piece h1{
     font-weight: bold;
 }
 footer{
@@ -246,7 +311,6 @@ footer{
     gap: 70px;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     }
 .bottom-footer{
     display: flex;justify-content: space-between;
@@ -263,11 +327,6 @@ footer{
     border-radius: 15px;
     width: 40vh;
     height: 37vh;
-}
-.last-vase-container .image{
-    /* width: 600px;
-    height: 500px; */
-   
 }
 .image-right{
     width: 700px;
@@ -290,7 +349,6 @@ footer{
 }
 .all-icons{
     background-color: #474747;
-    /* height: 130px; */
     width: 90px;
     border: none;
     border-radius: 20px;
@@ -305,3 +363,115 @@ footer{
     gap: 120px;
     justify-content: center;
 }
+ @media screen and (min-width:320px) and ( max-width:500px){
+    .vase-container{
+        flex-wrap: wrap;
+    }
+    .heading{
+        flex-wrap: wrap;
+        
+    }
+    .figure-container{
+        flex-wrap: wrap;
+    }
+    .image-container{
+        margin-top: 40%;
+        margin-right: 100%;
+    }
+    .image-container img{
+        width: 27vh;
+        margin-right: 70%;
+    }
+    .logo-container{
+        flex-wrap: wrap;
+    }
+    .trend-home-container{
+        flex-wrap: wrap;
+    }
+    .trend-home-container img{
+        width: 30vh;
+    }
+    .stylish-decor{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .stylish-decor img{
+        width: 30vh;
+    }
+    .icon{
+        flex-wrap: wrap;
+    }
+    .last-vase-container{
+        flex-wrap: wrap;
+    }
+     .last-vase-container .image img{
+        width: 25vh;
+    }
+    .top-footer{
+        flex-wrap: wrap;
+    }
+    .bottom-footer{
+        flex-wrap: wrap;
+    }
+    .nav{
+        flex-wrap: wrap;
+        margin-bottom: 100px;
+    }
+    .links{
+        flex-wrap: wrap;
+    }
+    .feature{
+        margin-top: 60px;
+    }
+    .shape{
+        width: 10vh;
+    }
+} 
+ @media screen and (min-width:501px)and (max-width:1758){
+  .icon{
+    margin-left: 10%;
+
+
+  }
+  body{
+    margin-left: 10px;
+     width: 60%; 
+    margin: auto;
+
+  }
+
+  .vase-container{
+    width: 120vh;
+  }
+  
+    .vase-figure img{
+        width: 17vh;
+        height: 17vh;
+    }
+    .seller{
+        width: 86.5vh;
+    }
+    .logo-container{
+        gap: 40px;
+    }
+    .icon{
+      gap:25px;
+      margin-left: 170px;
+    }
+    .all-icons svg{
+        width: 5vh;
+    }
+    .all-icons{
+        width: 30px;
+    }
+    .last-vase-container{
+      gap:100px
+    }
+    .bottom-footer{
+        gap: 100px;
+    }
+    .top-footer{
+        gap: 60px;
+    }
+ 
+} 
