--- a/style.css
+++ b/style.css
@@ -224,6 +224,8 @@ body{
        justify-content: space-between;
         margin-top: 100px;
         font-size: 18px;
+        padding: 20px;
+        background-color: rgb(252,251,250);
     }
     .seller{
         display: flex;
